<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="ru">

    <string name="groups">Группы</string>
    <string name="refresh">Обновить</string>
    <string name="teachers">Преподаватели</string>
    <string name="teacher">Преподаватель</string>
    <string name="schedule">Расписание</string>
    <string name="settings">Настройки</string>
    <string name="app_info">Инфо о приложение</string>

    <string name="app_name">Расписание</string>
    <string name="activity_label_teachers">@string/teachers</string>
    <string name="activity_label_department">Форма обучения</string>
    <string name="activity_label_group">Группа</string>
    <string name="activity_label_course">Курс</string>
    <string name="activity_label_faculty">Факультет</string>
    <string name="activity_label_group_schedule">@string/schedule</string>
    <string name="activity_label_teacher_schedule">@string/schedule</string>
    <string name="activity_label_mode_chooser">Выбор режима</string>
    <string name="activity_label_group_picker">Выбор группы</string>
    <string name="activity_label_app_info">@string/app_info</string>
    <string name="activity_label_favourite">Избранное</string>
    <string name="activity_label_lesson">Пара</string>

    <string name="navigation_my_schedule">Мое расписание</string>
    <string name="navigation_teachers_schedule">@string/teachers</string>
    <string name="navigation_favourites">Избранное</string>
    <string name="navigation_share_app">Поделиться ссылкой</string>
    <string name="navigation_feedback">Обратная связь</string>
    <string name="navigation_student_schedule">@string/groups</string>
    <string name="app_share_can_not_handle">Невозможно отправить ссылку на приложение</string>
    <string name="app_share_checkout">Попробуй это приложение</string>
    <string name="app_share_title">Поделиться приложение</string>

    <string name="change_app_mode">Изменить режим</string>

    <string name="search_teachers_label">Поиск преподователя</string>
    <string name="search_teachers_hint">Введите имя</string>

    <string name="schedule_empty">Нет актуального расписания</string>
    <string name="group_list_empty">Нет групп</string>

    <string name="app_mode_student">Студент</string>
    <string name="app_mode_teacher">@string/teacher</string>

    <string name="button_app_mode_student">Я - Студент</string>
    <string name="button_app_mode_teacher">Я - Преподаватель</string>

    <string name="error_no_network">Отсутсвует подключение к интернету</string>
    <string name="error_server">Сервер не отвечает</string>
    <string name="error_client">Ошибка при запросе данных</string>
    <string name="error_unknown_error">Неизвестная ошибка</string>

    <string name="free_time">Форточка</string>
    <string name="lesson_time_format">%1$s\n%2$s</string>
    <string name="lesson_header_format">%1$s %2$s</string>
    <string name="groud_fulltitle_format">%1$s, $2$s курс</string>

    <string name="navigation_drawer_open">Открыть меню навигации</string>
    <string name="navigation_drawer_close">Закрыть меню навигации</string>

    <string name="menu_schedule_star">Добавить в избранное</string>
    <string name="menu_schedule_unstar">Удалить из избранного</string>

    <string name="result_added_to_favorite">Добавлено в избранное</string>
    <string name="result_removed_from_favorite">Удалено из избранного</string>

    <string name="favourite_list_empty">Избранное пустое</string>

    <string name="groups_delimiter">, </string>

    <string name="label_subgroup">Подгруппа</string>
    <string name="label_teacher">@string/teacher</string>
    <string name="label_address">Адрес</string>
    <string name="label_groups">Группы</string>

    <string name="pick_date">Выбрать дату</string>

    <string name="feedback_email" translatable="false">kirich1409@gmail.com</string>
    <string name="feedback_subject">Отзыв о "Расписание ГрГУ"</string>
    <string name="feedback_send_impossible">Невозможно отправить отзыв. На вашем устройстве нет почтового клиента</string>
    <string name="feedback_send_dialog_title">Отправить отзыв</string>
</resources>
